tests/ui/attributes/crate-root-path-in-different-file/crate-root-path-in-different-file.stderr
error: the `#![crate_name]` attribute can only be used at the crate root
  --> $DIR/submod.rs:2:1
   |
LL | #![crate_name = "bar"]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: the crate root is at `$DIR/crate-root-path-in-different-file.rs`
note: the lint level is defined here
  --> $DIR/crate-root-path-in-different-file.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

