tests/ui/attributes/crate-root-path-in-different-file/crate-root-path-in-different-file.rs
#![deny(unused_attributes)]

mod submod;

fn main() {}

//~? ERROR the `#![crate_name]` attribute can only be used at the crate root
